
The buffer-local variable `bidi-paragraph-direction', if non-nil,
forces each paragraph in the buffer to have its base direction
according to the value of this variable.  Possible values are
`right-to-left' and `left-to-right'.  If the value is nil (the
default), Emacs determines the base direction of each paragraph from
its text, as specified by the Unicode Bidirectional Algorithm.

Reordering of bidirectional text for display in Emacs is a "Full
bidirectionality" class implementation of the Unicode Bidirectional
Algorithm.

Note that some advanced display features, such as overlay strings and
`display' text properties, do not yet work correctly when
bidirectional text is reordered for display.

** GTK scroll-bars are now placed on the right by default.
Use `set-scroll-bar-mode' to change this.

** GTK tool bars can have just text, just images or images and text.
Customize `tool-bar-style' to choose style.  On a Gnome desktop, the default
is taken from the desktop settings.

** Lucid menus and dialogs can display antialiased fonts if Emacs is built
with Xft.

** Basic SELinux support has been added.
This requires Emacs to be linked with libselinux at build time.

*** Emacs preserves the SELinux file context when backing up, and
optionally when copying files. To this end, copy-file has an extra
optional argument, and backup-buffer and friends include the SELinux
context in their return values.

*** The new functions file-selinux-context and set-file-selinux-context
get and set the SELinux context of a file.

*** Tramp offers handlers for file-selinux-context and set-file-selinux-context
for remote machines which support SELinux.

** New scrolling commands `scroll-up-command' and `scroll-down-command'
(bound to C-v/[next] and M-v/[prior]) does not signal errors at top/bottom
of buffer at first key-press (instead moves to top/bottom of buffer)
when a new variable `scroll-error-top-bottom' is non-nil.

** New scrolling commands `scroll-up-line' and `scroll-down-line'