@@ -828,9 +828,9 @@ is okay.  See `mode-line-format'.")
 (define-key global-map [C-home]		'beginning-of-buffer)
 (define-key global-map [M-home]		'beginning-of-buffer-other-window)
 (define-key esc-map    [home]		'beginning-of-buffer-other-window)
-(define-key global-map [left]		'backward-char)
+(define-key global-map [left]		'left-arrow-command)
 (define-key global-map [up]		'previous-line)
-(define-key global-map [right]		'forward-char)
+(define-key global-map [right]		'right-arrow-command)
 (define-key global-map [down]		'next-line)
 (define-key global-map [prior]		'scroll-down-command)
 (define-key global-map [next]		'scroll-up-command)
